--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"lib/images/LogoSample.png":["lib/images/LogoSample.png"],"lib/images/fondo.png":["lib/images/fondo.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"lib/images/LogoSample.png":["lib/images/LogoSample.png"],"lib/images/fondo.png":["lib/images/fondo.png"],"lib/images/sit1.png":["lib/images/sit1.png"],"lib/images/sit2.png":["lib/images/sit2.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
